fixed stash builder. Added Metta as new system language